--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "d3": "^5.14.2",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
