--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "react-d3-examples",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.0",
     "chroma-js": "^2.1.0",
     "d3": "^5.14.2",
     "dotenv": "^8.2.0",
+    "isomorphic-unfetch": "^3.0.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
