--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "chroma-js": "^2.1.0",
     "d3": "^5.14.2",
     "dotenv": "^8.2.0",
-    "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
